test/modules/deitz/test_module_shadows.good
test_module_shadows.chpl:9: In function 'foo':
test_module_shadows.chpl:10: error: illegal use of module 'M2'
